# arki

./: .gitignore  CLAUDE.md  HANDOFF.md  ITERATION_PLAN.md  README.md  components.json  index.html  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.json
.claude/: settings.local.json
.github/workflows/: release.yml
src/: App.tsx  globals.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/shell-extension/: build.bat  build.ps1  shell_extension.def
src-tauri/shell-extension/src/: shell_extension.c
src-tauri/src/: lib.rs  main.rs
src-tauri/src/services/: archive.rs  archive_handler.rs  dispatcher.rs  history.rs  mod.rs  settings.rs
src-tauri/src/services/handlers/: brotli.rs  gz.rs  mod.rs  rar.rs  sevenz.rs  tar.rs  tar_gz.rs  zip.rs  zstd.rs
src-tauri/tests/: archive_tests.rs
src-tauri/windows/: hooks.nsh
src-tauri/windows/sparse-package/: AppxManifest.xml  Register-SparsePackage.ps1
src/components/: WelcomeView.tsx
src/components/__tests__/: DetailPanel.test.tsx  FileListView.test.tsx  WelcomeView.test.tsx
src/components/detail-panel/: DetailPanel.tsx
src/components/dialogs/: CreateArchiveDialog.tsx  ExtractDialog.tsx  PasswordDialog.tsx  SettingsDialog.tsx
src/components/file-list/: FileListSkeleton.tsx  FileListView.tsx
src/components/file-tree/: FileTree.tsx
src/components/layout/: HistoryPanel.tsx  (+4 more)
src/hooks/: useKeyboardShortcuts.ts  useUpdater.ts
src/lib/: fileIcons.tsx  format.ts  path.ts
src/store/: archiveStore.ts
src/test/: mocks.ts
(+18 files in other folders)
