[package]
name = "arki"
version = "0.1.0"
description = "A modern archive utility for Windows"
authors = ["Kutius"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "arki_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2.2"
sha2 = "0.10"
tar = "0.4"
flate2 = "1"
chrono = { version = "0.4", features = ["serde"] }
brotli = "7"
zstd = "0.13"
sevenz-rust = { version = "0.6", features = ["aes256"] }
unrar = "0.5"
base64 = "0.22"
dirs = "6"
tauri-plugin-updater = "2.10.1"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-notification = "2.3.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_UI_Shell"] }

